@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.messagecounter"
-    android:versionCode="234"
+    android:versionCode="240"
     android:versionName="2.2" >
 
     <uses-sdk
