@@ -154,6 +154,10 @@ MessageCounter 2.1.20 [December 2013]
  - [CHANGED]	Sent messages count ui tweaks
  - [CHANGED]	Unobstructed loading screen
  
+ MessageCounter 2.2.80 [April 2014]
+ - [CHANGED]	Using Pager Tab Strip
+ 
+ 
  // TODO
  animations for counter fragment
  last cycle stats
